Update homepage URL for new repository

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
-  "homepage": "https://redraider22.github.io/retail-spark-blog",
+  "homepage": "https://buck.github.io/retail-spark-blog",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
